# Raycasting

./: .gitignore  CMakeLists.txt
engine/.deprecated/: eraseme.cpp
engine/.deprecated/include/math/: Fraction.hpp  Trig.hpp  utils.hpp
engine/.deprecated/src/math/: Fraction.cpp  Trig.cpp  utils.cpp
engine/include/data/: List.hpp
engine/include/entities/: Creature.hpp  Entity.hpp  Player.hpp
engine/include/entities/creatures/: Creature.hpp  Player.hpp
engine/include/entities/objects/: Object.hpp
engine/include/graphic/: Canvas.hpp  Raycaster.hpp
engine/include/handlers/: CollisionHandler.hpp
engine/include/math/: AABB.hpp  FixedPointInt.hpp  FixedPointInt32.hpp  Trig.hpp  Vector2D.hpp  utils.hpp
engine/include/world/: Level.hpp
engine/src/entities/: Creature.cpp  Entity.cpp  Player.cpp
engine/src/entities/creatures/: Creature.cpp  Player.cpp
engine/src/entities/objects/: Object.cpp
engine/src/graphic/: Canvas.cpp  Raycaster.cpp
engine/src/handlers/: CollisionHandler.cpp
engine/src/math/: AABB.cpp  FixedPointInt.cpp  FixedPointInt32.cpp  Trig.cpp  utils.cpp
engine/src/world/: Level.cpp
include/: Level1.hpp
src/: Level1.cpp  main.cpp
src/Game/: Player.cpp
