cmake_minimum_required(VERSION 3.10)
project(Raycasting)

###############################################################################
## standards ##################################################################
###############################################################################

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

###############################################################################
## source files ###############################################################
###############################################################################

# Engine sources (ALL of them)
file(GLOB_RECURSE sources_engine
    engine/src/*.cpp
)

# App/game sources
set(sources
    src/main.cpp
    src/Level1.cpp
)

###############################################################################
## SDL2 #######################################################################
###############################################################################

find_package(SDL2 REQUIRED)

###############################################################################
## executable #################################################################
###############################################################################

add_executable(Raycasting
    ${sources}
    ${sources_engine}
)

###############################################################################
## includes ###################################################################
###############################################################################

target_include_directories(Raycasting PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/engine/include
    ${SDL2_INCLUDE_DIRS}
)

###############################################################################
## compile options ############################################################
###############################################################################

target_compile_options(Raycasting PRIVATE 
    -Wall 
    -Wextra 
    -Wfloat-conversion
)

add_compile_options(-fdiagnostics-color=always)

###############################################################################
## linking ####################################################################
###############################################################################

target_link_libraries(Raycasting PRIVATE ${SDL2_LIBRARIES})